# Moiras

./: .gitignore  .gitmodules  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  NED_INTEGRATION.md  README.md  cmake_install.cmake
.cache/clangd/index/: FA6FreeSolidFontData.h.FAAF8FB1683EE123.idx  IconsFontAwesome6.h.F73D6F3D6B35563E.idx  asset_spawner.h.6246BFE0E1A1B27A.idx  camera.cpp.CFCD40078736763A.idx  camera.h.3A43AE7359F6A744.idx  character.cpp.F64F60BE9A93D871.idx  character.h.EAA850BB16A6D938.idx  controller.cpp.B9C60550C0A6D52C.idx  controller.h.0103923FFBA00E82.idx  game.cpp.6547CD3C2AF4B93C.idx  game.h.5FD91F534471404C.idx  game_object.cpp.4D04AE4DE8EFA88B.idx  game_object.h.00F4EE5CF3F57A2B.idx  gui.cpp.9C48155029636DD6.idx  gui.h.2470BBC26CDB6DC5.idx  imgui_impl_raylib.h.CF37FC6F22E4BECD.idx  lightmanager.cpp.E2A2E7FD44166CE8.idx  lightmanager.h.379B3B313334E6F6.idx  lights.cpp.1AF5964355C44BCA.idx  lights.h.DAA4743C9DB12CB8.idx  main.cpp.E3F99300B3F33CC9.idx  map.cpp.485A591891C18372.idx  map.h.2A07B4AD726F6744.idx  models.cpp.C42B2BBBF032CA1C.idx  models.h.0E85F9C9CE1125C5.idx  navmesh.cpp.B5BC9DAC06F6D46F.idx  navmesh.h.13874E7C497BD1DE.idx  raygui.h.838B828085FD7DCA.idx  rlImGui.cpp.75DC27C0CFFDAFB3.idx  rlImGui.h.7BED91A36FFF12A1.idx  sidebar.cpp.01B473E7A4600DCB.idx  sidebar.h.5BB866F98FF7107F.idx  window.h.FDE49508796AA179.idx
assets/: gun.glb  lizardman.fbx  monster_ue5rig.glb  robot2.glb  stylized_stone_pillar.glb  wolf.glb  wolfman.glb
assets/Gothic Furniture/: GothicFurniture.fbx  Readme.txt  RetroGothicFurniture.unitypackage
assets/dialogue/: Character.yarn
assets/fonts/Orbit/: OFL.txt
assets/scripts/: player_controller.lua
assets/shaders/: basic_lighting.fs  basic_lighting.vs  cel_shading.fs  cel_shading.vs  instancing.fs  instancing.vs  outline.fs  pbr.fs  pbr.vs  sea_shader.fs  sea_shader.vs  shadow_depth.fs  shadow_depth.vs
imgui/: CMakeLists.txt
materials/: pbr.mat
src/: Makefile  a.out  clay_renderer_raylib.c  cmake_install.cmake  imgui.ini  main.cpp
src/audio/: audiodevice.hpp
src/building/: structure.cpp  structure.h  structure_builder.cpp  structure_builder.h
src/camera/: camera.cpp  camera.h
src/character/: character.cpp  character.h  controller.cpp  controller.h  stats.h
src/commons/: math_types.h
src/game/: game.cpp  game.h  game_object.cpp  game_object.h
src/ground/: ground.cpp
src/gui/: asset_spawner.h  filepicker.cpp  filepicker.h  gui.cpp  gui.h  gui_utils.h  inventory.cpp  inventory.hpp  ned_stubs.cpp  script_editor.cpp  script_editor.h  sidebar.cpp  sidebar.h
src/input/: input_manager.cpp  input_manager.h  input_types.h
src/items/: items.hpp  weapons.hpp
src/lights/: lightmanager.cpp  lightmanager.h  lights.cpp  lights.h
src/map/: environment.cpp  environment.hpp  map.cpp  map.h
src/models/: models.cpp  models.h
src/navigation/: navmesh.cpp  navmesh.h
src/rendering/: filament_engine.cpp  filament_engine.h
src/resources/: model_manager.cpp  model_manager.h
src/scripting/: .undo-redo-ned.json  LuaBindings.cpp  LuaBindings.hpp  ScriptComponent.cpp  ScriptComponent.hpp  ScriptEngine.cpp  ScriptEngine.hpp  script_manager.hpp
src/scripting/bindings/: CharacterBindings.cpp  CharacterBindings.hpp  GameObjectBindings.cpp  GameObjectBindings.hpp  InputBindings.cpp  InputBindings.hpp  MathBindings.cpp  MathBindings.hpp  WorldBindings.cpp  WorldBindings.hpp
src/time/: time_manager.cpp  time_manager.h
src/tree/: tree.cpp
src/window/: sdl_window.cpp  sdl_window.h  window.h
